--- a/Comp229-Assign03/Site.Master
+++ b/Comp229-Assign03/Site.Master
@@ -47,13 +47,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    <div class="brand-logo">
                     <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    </div>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/">HomePage</a></li>
+                        <li><a runat="server" href="~/StudentPage">Student Page</a></li>
+                        <li><a runat="server" href="~/CoursePage">Course Page</a></li>
                     </ul>
                 </div>
             </div>
